--- a/seminar6/pink_layout_flex_catalog/catalog.html
+++ b/seminar6/pink_layout_flex_catalog/catalog.html
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <section class="filter-sort ">
+    <section class="filter-sort">
         <div class="filter-sort__box center">
             <details class="filter">
                 <summary class="filter-head">
@@ -241,20 +241,20 @@
                     </summary>
                     <div class="sort-content">
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox1" type="checkbox">
-                            <label class="sort-label" for="checkbox1">XS</label>
+                            <input class="checkbox" id="checkbox5" type="checkbox">
+                            <label class="sort-label" for="checkbox5">XS</label>
                         </div>
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox2" type="checkbox">
-                            <label class="sort-label" for="checkbox2">S</label>
+                            <input class="checkbox" id="checkbox6" type="checkbox">
+                            <label class="sort-label" for="checkbox6">S</label>
                         </div>
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox3" type="checkbox">
-                            <label class="sort-label" for="checkbox3">M</label>
+                            <input class="checkbox" id="checkbox7" type="checkbox">
+                            <label class="sort-label" for="checkbox7">M</label>
                         </div>
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox4" type="checkbox">
-                            <label class="sort-label" for="checkbox4">L</label>
+                            <input class="checkbox" id="checkbox8" type="checkbox">
+                            <label class="sort-label" for="checkbox8">L</label>
                         </div>
                     </div>
                 </details>
@@ -264,20 +264,20 @@
                     </summary>
                     <div class="sort-content">
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox1" type="checkbox">
-                            <label class="sort-label" for="checkbox1">XS</label>
+                            <input class="checkbox" id="checkbox9" type="checkbox">
+                            <label class="sort-label" for="checkbox9">XS</label>
                         </div>
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox2" type="checkbox">
-                            <label class="sort-label" for="checkbox2">S</label>
+                            <input class="checkbox" id="checkbox10" type="checkbox">
+                            <label class="sort-label" for="checkbox10">S</label>
                         </div>
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox3" type="checkbox">
-                            <label class="sort-label" for="checkbox3">M</label>
+                            <input class="checkbox" id="checkbox11" type="checkbox">
+                            <label class="sort-label" for="checkbox11">M</label>
                         </div>
                         <div class="sort-content__box">
-                            <input class="checkbox" id="checkbox4" type="checkbox">
-                            <label class="sort-label" for="checkbox4">L</label>
+                            <input class="checkbox" id="checkbox12" type="checkbox">
+                            <label class="sort-label" for="checkbox12">L</label>
                         </div>
                     </div>
                 </details>
@@ -587,7 +587,7 @@
     
     <footer class="footer center">
         <div class="footer-left">
-            <p class="footer__text">&copy 2021 Brand All Rights Reserved.</p>
+            <p class="footer__text">&copy; 2021 Brand All Rights Reserved.</p>
         </div>
         <div class="footer-right">
             <div class="footer__icon">
