--- a/seminar6/pink_layout_grid/product.html
+++ b/seminar6/pink_layout_grid/product.html
@@ -211,49 +211,47 @@
                         </details>
                         <details class="sort-details">
                             <summary class="sort-head">
-                                <span class="sort-heading">CHOOSE&nbsp;SIZE</span>
-                                <i class="fa fa-angle-down down-icon" aria-hidden="true"></i>
+                                <span class="sort-heading">CHOOSE&nbsp;SIZE</span><i class="fa fa-angle-down down-icon" aria-hidden="true"></i>
                             </summary>
                             <div class="sort-content">
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox1" type="checkbox">
-                                    <label class="sort-label" for="checkbox1">XS</label>
+                                    <input class="checkbox" id="checkbox5" type="checkbox">
+                                    <label class="sort-label" for="checkbox5">XS</label>
                                 </div>
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox2" type="checkbox">
-                                    <label class="sort-label" for="checkbox2">S</label>
+                                    <input class="checkbox" id="checkbox6" type="checkbox">
+                                    <label class="sort-label" for="checkbox6">S</label>
                                 </div>
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox3" type="checkbox">
-                                    <label class="sort-label" for="checkbox3">M</label>
+                                    <input class="checkbox" id="checkbox7" type="checkbox">
+                                    <label class="sort-label" for="checkbox7">M</label>
                                 </div>
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox4" type="checkbox">
-                                    <label class="sort-label" for="checkbox4">L</label>
+                                    <input class="checkbox" id="checkbox8" type="checkbox">
+                                    <label class="sort-label" for="checkbox8">L</label>
                                 </div>
                             </div>
                         </details>
                         <details class="sort-details">
                             <summary class="sort-head">
-                                <span class="sort-heading">PRICE</span>
-                                <i class="fa fa-angle-down down-icon" aria-hidden="true"></i>
+                                <span class="sort-heading">PRICE</span><i class="fa fa-angle-down down-icon" aria-hidden="true"></i>
                             </summary>
                             <div class="sort-content">
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox1" type="checkbox">
-                                    <label class="sort-label" for="checkbox1">XS</label>
+                                    <input class="checkbox" id="checkbox9" type="checkbox">
+                                    <label class="sort-label" for="checkbox9">XS</label>
                                 </div>
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox2" type="checkbox">
-                                    <label class="sort-label" for="checkbox2">S</label>
+                                    <input class="checkbox" id="checkbox10" type="checkbox">
+                                    <label class="sort-label" for="checkbox10">S</label>
                                 </div>
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox3" type="checkbox">
-                                    <label class="sort-label" for="checkbox3">M</label>
+                                    <input class="checkbox" id="checkbox11" type="checkbox">
+                                    <label class="sort-label" for="checkbox11">M</label>
                                 </div>
                                 <div class="sort-content__box">
-                                    <input class="checkbox" id="checkbox4" type="checkbox">
-                                    <label class="sort-label" for="checkbox4">L</label>
+                                    <input class="checkbox" id="checkbox12" type="checkbox">
+                                    <label class="sort-label" for="checkbox12">L</label>
                                 </div>
                             </div>
                         </details>
@@ -371,7 +369,7 @@
     
     <footer class="footer center">
         <div class="footer-left">
-            <p class="footer__text">&copy 2021 Brand All Rights Reserved.</p>
+            <p class="footer__text">&copy; 2021 Brand All Rights Reserved.</p>
         </div>
         <div class="footer-right">
             <div class="footer__icon">
