--- a/seminar6/pink_layout_grid_rubber/cart.html
+++ b/seminar6/pink_layout_grid_rubber/cart.html
@@ -259,7 +259,7 @@
 
     <footer class="footer center">
         <div class="footer-left">
-            <p class="footer__text">&copy 2021 Brand All Rights Reserved.</p>
+            <p class="footer__text">&copy; 2021 Brand All Rights Reserved.</p>
         </div>
         <div class="footer-right">
             <div class="footer__icon">
